--- a/css/footer.css
+++ b/css/footer.css
@@ -16,23 +16,24 @@ footer{
 }
 
 .footer_logo{
-  width:30%;
+  width:25%;
   box-sizing:border-box;
 }
 
 .footer_logo img{                                      
-  width:50%;
-  padding:20% 15%;
+  width:50px;
+  padding:12% 0 5% 25%;
 }
 
 .sns{
-  width:60%;
+  width:75%;
+  padding:5% 2% 2% 0;
   box-sizing:border-box;
 }
 
 .sns img{
-  width:20%;
-  padding:2%;
+  width:35px;
+  padding:1.5%;
   cursor:pointer;
 }
 
@@ -67,7 +68,7 @@ footer{
 }
 
 .support_button img{
-  width:80px;
-  height:80px;
+  width:70px;
+  height:70px;
 }
 
